# cli-gpt

./: Cargo.toml  README.md  tmp.tsx
src/: groq.rs  main.rs
